fix search bar vertical alignment

--- a/_assets/css/_search.sass
+++ b/_assets/css/_search.sass
@@ -5,7 +5,7 @@
   padding: 0 0 0 2em
   float: right
   display: block
-  top: 25%
+  top: 0.75em
   width: 100%
 
 .search-bar
